force-app/main/default/objects/ssot__EntpUserIdentification__dlm/fields/ssot__EnterpriseSource__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnterpriseSource__c</fullName>
    <label>Enterprise Source</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnterpriseSource</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>