force-app/main/default/objects/ssot__EntpUserIdentification__dlm/fields/ssot__EnterpriseUserId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnterpriseUserId__c</fullName>
    <label>Enterprise User</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnterpriseUserId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>