force-app/main/default/objects/ssot__EntpUserIdentification__dlm/fields/ssot__EnterpriseUserIdentificationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnterpriseUserIdentificationType__c</fullName>
    <label>Enterprise User Identification Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnterpriseUserIdentificationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>