force-app/main/default/objects/ssot__EntpUserIdentification__dlm/fields/ssot__EnterpriseUserIdentificationValText__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnterpriseUserIdentificationValText__c</fullName>
    <label>Enterprise User Identification Value</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnterpriseUserIdentificationValText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>