force-app/main/default/objects/ssot__EntpUserIdentification__dlm/fields/ssot__rel_1743122254975_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1743122254975_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EntpUserIdentification_EnterpriseUse_rel</label>
    <referenceTo>ssot__EntpUser__dlm</referenceTo>
    <relationshipLabel>EntpUserIdentification_EnterpriseUse_rel</relationshipLabel>
    <relationshipName>rel_1743122254975_end</relationshipName>
    <type>Lookup</type>
</CustomField>